# openlid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PRODUCT.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml  release.yml  sync-cask-to-tap.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: control_server.rs  helper_client.rs  helper_installer.rs  launch_at_login.rs  main.rs  main_thread.rs  notify.rs  recovery.rs  state_runtime.rs
crates/app/src/cli/: commands.rs  mod.rs
crates/app/src/menubar/: icons.rs  menu.rs  mod.rs  preferences.rs  preferences_webview.html  status_item.rs
crates/app/src/platform/macos/: activity.rs  display.rs  iokit_ffi.rs  lid_monitor.rs  mod.rs  network_monitor.rs  power_source.rs
crates/app/src/updater/: install_detect.rs  installer.rs  installer_script.sh  mod.rs  release.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  mode.rs  platform.rs  state.rs
crates/core/src/ipc/: control.rs  helper.rs
crates/helper/: Cargo.toml  build.rs
crates/helper-protocol/: Cargo.toml  build.rs
crates/helper-protocol/objc/: OpenLidHelperProtocol.h  OpenLidHelperProtocol.m
crates/helper-protocol/src/: lib.rs
crates/helper/src/: client_validator.rs  idle_exit.rs  main.rs  ownership_marker.rs  pmset.rs  xpc_listener.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  manual-test-checklist.md
docs/development/plans/: 2026-05-10-open-lid-mvp.md  2026-05-12-v1.0-stability-pass.md
docs/development/specs/: 2026-05-10-open-lid-design.md  2026-05-12-v1.0-stability-pass.md
docs/superpowers/notes/: 2026-05-10-objc2-xpc-spike-findings.md
docs/superpowers/plans/: 2026-05-10-open-lid-mvp.md
docs/superpowers/specs/: 2026-05-22-in-transit-auto-disable-design.md  2026-05-22-openlid-update-design.md  2026-05-22-scheduled-hours-design.md  2026-06-24-helper-recovery-and-activity-aware-in-transit-design.md
resources/app/: AppIcon.icns  Info.plist  OpenLid.entitlements  install-helper.sh
resources/helper/: Helper.entitlements  io.openlid.helper.plist
scripts/: build-app-bundle.sh  dev-install-app.sh  dev-install-helper.sh  dev-uninstall-helper.sh  generate-icon.sh  install-cli-symlink.sh  install.sh
site/: .gitignore  .prettierignore  AGENTS.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  tokens.css
site/public/: _headers
site/scripts/: verify.mjs
site/src/: content.config.ts  site-config.ts  starter-version.ts
site/src/components/: seo-json.tsx  seo.tsx
site/src/components/pages/: not-found.tsx
site/src/components/pages/home/: page.tsx
site/src/components/pages/home/components/: menu-bar-card.tsx  menu-bar-scene.tsx  product-screenshot.tsx  terminal.tsx
site/src/components/pages/home/sections/: agent-handoff.tsx  cli.tsx  features.tsx  final-cta.tsx  hero.tsx  origin-story.tsx  privacy.tsx  product-screenshots.tsx  roadmap.tsx  scenarios.tsx
site/src/components/pages/install/: page.tsx
site/src/components/pages/install/sections/: install-hero.tsx
site/src/components/sections/: faq.tsx  footer.tsx  install-methods.tsx  login-items-approval.tsx  navbar.tsx  update-uninstall.tsx
site/src/components/ui/: apple-mark.tsx  button.tsx  github-mark.tsx  linkedin-mark.tsx  terminal.tsx  wordmark.tsx
site/src/layouts/: Layout.astro
site/src/lib/: content.ts  site-path.ts
site/src/lib/ploy-forms/: PloyForm.astro  submit-form.ts
site/src/lib/sitemap/: get-sitemap-paths.ts  proxy-sitemap.ts  shared.ts  sitemap-with-custom-pages-plugin.ts  sitemap.ts
site/src/pages/: 404.astro  [...slug].astro  coding-agents.astro  index.astro  install.astro  llms.txt.ts  robots.txt.ts  story.astro
site/src/styles/: globals.css
xtask/: Cargo.toml
