[workspace]
members = ["crates/core", "crates/helper-protocol", "crates/app", "crates/helper", "xtask"]
resolver = "2"

[workspace.package]
version = "2.3.3"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/openlid/openlid"

[workspace.dependencies]
# Internal
openlid-core = { path = "crates/core" }

# Apple bindings (versions verified by Phase 0 spike)
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSDictionary", "NSArray", "NSSet", "NSError", "NSXPCConnection", "NSObject", "NSRunLoop", "block2"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSMenu", "NSMenuItem", "NSImage", "NSButton", "NSControl", "NSResponder", "NSView", "NSWindow", "NSAlert", "NSCell", "NSTextField", "NSPopUpButton", "NSSegmentedControl", "NSStepper", "NSGraphics"] }
objc2-user-notifications = { version = "0.3", features = ["UNUserNotificationCenter", "UNNotificationContent", "UNNotificationRequest", "UNNotificationAction", "UNNotificationCategory", "UNNotificationResponse", "UNNotification", "block2"] }
block2 = "0.6"
core-foundation = "0.10"
security-framework = "3"

# CLI / data
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }

# Infra
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "6"
interprocess = { version = "2", features = ["tokio"] }

# Updater (openlid update + menubar Check for updates...)
# ureq 3 defaults to rustls + bundled webpki-roots; no OpenSSL on the
# build host. We use the json feature for ergonomic deserialization
# of the GitHub release response.
ureq = { version = "3", features = ["json"] }
semver = "1"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
