[package]
name = "open-lid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "open-lid"
path = "src/main.rs"

[dependencies]
open-lid-core = { workspace = true }
open-lid-helper-protocol = { path = "../helper-protocol" }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }
block2 = { workspace = true }
core-foundation = { workspace = true }
core-foundation-sys = "0.8"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
toml = { workspace = true }
interprocess = { workspace = true }
directories = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
