[package]
name = "open-lid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
